--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,12 @@
 
 body {
   font-family: "Lato", sans-serif;
+  background-color: #F7F7F7;
+}
+
+#filter_tiket:hover, filter_tiket:focus,filter_tiket:focus-within {
+  color: gray;
+  padding: 2px;
 }
 
 /* html,
