--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: "Lato", sans-serif;
-  background-color: #FFFFFF;
+  background-color: #f7f7f7;
 }
 
 #filter_tiket:hover, filter_tiket:focus,filter_tiket:focus-within {
